# msc-thesis

./: .gitignore  omega_automata.odg  questions.odt  todo.txt  ubelix_notes.txt
automata/: paper_example.gff
bib/: automata.bib  buchi_compl.bib
bibliography/: buchi_complementation.bib
christian/libefa/: .directory  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.ac
christian/libefa/doc/: Makefile  Makefile.in
christian/libefa/etc/: Makefile  Makefile.in  eval_hash.py  example6.xml  faxml.xsd  michel4.xml  symbol2.xml  tasks.sh
christian/libefa/include/: Makefile
christian/libefa/include/libefa/: .directory  Makefile  efa.h  errno.h  error.h
christian/libefa/man/: Makefile  Makefile.in
christian/libefa/src/: .directory  Makefile  Makefile.in
christian/libefa/src/buechi/: .directory  Makefile  Makefile.am  Makefile.in  buechi.c
christian/libefa/src/famod/: .directory  Makefile  Makefile.in  famod.c
christian/libefa/src/famod/.deps/: fadot.Po  memory.Plo  ref.Plo
christian/libefa/src/hash/: additive.h  bernstein.c  cessu.c
christian/libefa/tests/: Makefile  Makefile.in
christian_goettel/libefa/: Makefile.maint  acinclude.m4  configure
drawings/colors/: colors.tex
drawings/subset-tuple_construction/: automata.tex
goal/: HelloCommand.java  bash_profile  constructions.ods  default_options.txt  goal.sublime-project  goal.sublime-workspace  goal_complement.txt  plugin.sublime-project  plugin.sublime-workspace  plugin_generate.sh
goal/api/: deprecated-list.html  overview-tree.html  serialized-form.html
goal/api_2013-07-11/: allclasses-noframe.html
goal/automata/: accepts_everything.gff  deterministic.gff  example.gff  incomplete_1.gff  incomplete_2.gff  incomplete_3.gff  invalid.gff
goal/bad_m2_examples/: a.gff  b.gff  c.gff  d.gff  e.gff  f.gff  g.gff  h.gff  i.gff  j.gff  k.gff  l.gff  m.gff  n.gff  o.gff
goal/new_bad_m2_examples/: a.gff  b.gff
goal/notes/: constructions.txt  options.txt  porting_to_20141016.txt  versions.txt
goal/plugin/: plugin.sublime-project  plugin.sublime-workspace  test.gs
goal/plugin_scripts/: plugin_build.sh  plugin_clean.sh  plugin_generate.sh
goal/scripts/: complement.sh  complement_equiv.gs  correctness.gs  example.gff  nailgun_off.sh  nailgun_on.sh  plugin_build.sh  plugin_clean.sh  plugin_generate.sh  test.gff
goettel/libefa/: Makefile  NEWS  config.h  config.h.in
goettel/libefa/src/: Makefile.am  faxml.c  hash.c
goettel/libefa/src/famod/: Makefile.in
goettel/libefa/src/hash/: MurmurHash1.h  MurmurHash3.c
graphviz/: fsm.dot
implementation/: licenses.txt  nailgun.txt  test.dot  test.rb
implementation/automaton/: automaton.rb  nfa_1.yaml
implementation/heroku/: dirs.txt  installing_graphviz_in_heroku_build.txt
implementation/nfa2dfa/: automaton.rb  dfa.yaml  example.gff  nfa2dfa copy.rb  nfa2dfa.rb  nfa_3.yaml  nfa_4.yaml  outline.txt  test.gff
implementation/nfa_dfa/: dfa copy.rb  dfa.rb  dfa.yaml  foo.rb  nfa.rb  nfa_2.yaml  nfa_full copy.rb  nfa_full.rb  subsetstate.rb  test.rb  test.yaml  test_.rb
implementation/rails/: rails_hello_world.txt
libefa/libefa/: AUTHORS  HACKING  Makefile  Makefile.in  Makefile.inc  libefa.pc  libefa.pc.in
libefa/libefa/etc/: Makefile.am  eval_stat.py  example2.xml  example3.xml  example4.xml  example7.xml  gff2faxml.xsl  michel2.xml  michel3.xml  symbol3.xml  symbol4.xml  symbol5.xml  tasks.sh
libefa/libefa/include/libefa/: Makefile  Makefile.am  Makefile.in  buechi.h  fadot.h  famod.h  faxml.h  list.h
libefa/libefa/tests/: Makefile.am  efatests.c  efatooltests.c  efatooltests.h  valgrind-tests.sh
meetings/: questions.odt
meetings/18.08.2014/: 18.08.2014.txt
meetings/2014-03-17/: note.txt
meetings/2014-08-07/: note.txt
meetings/2014-11-17/: note.txt
notes/: Anecdotes.txt  Automata Tools.txt  Interim Note-Changes  Key Concepts.txt  Key Works.txt  Notes & Settings  Snippets.txt  today.txt
notes/1_automata/: automata_tools.txt
notes/2_model_checking/: notes.txt
notes/5_goal/: constructions.txt  porting_to_2014-11-17.txt
notes/7_r/: r_graphics_notes.txt
notes/buchi_complementation/: notes.txt
notes/construction/: implementation.txt
notes/goal/: jpf.odg
notes/libefa/: libefa_installation.txt
papers/: buchi_complementation.bib
plugin/2014-11-17/: complement.sublime-workspace  util.sublime-project  util.sublime-workspace
plugins/GOAL_2014-11-17/: complement.sublime-project  complement.sublime-workspace  util.sublime-workspace
pres/: demo.sh  demo.txt  pres.nav  pres.snm  pres.tex  pres.txt  pres_notes.txt
r/: plots.r  stats.r  toolbox.r
report/: main.tex  structure.txt
report/chapters/: 1_introduction.tex  2_background.tex  3_construction.tex  4_investigation.tex  5_results.tex  6_conclusions.tex  app_matrices.tex  app_plugin.tex  app_times.tex
report/input/: tikz.tex  titlepage.tex
report/styles/: thesis.cls
results/: evaluate.r  foo.r  old.r  read.r  readme.txt  toolbox.r
results/data/: readme.txt
results/figures/: readme.txt
results/main/: read.r  readme.txt
scripts/: build.sh
scripts/goal/: compl_equiv.gs  compl_equiv_2.gs  complement_single.sh  gen.gs  reduce.sh
scripts/misc/: macc.gs  partition.sh  rename.sh
scripts/plugin/: build.sh  remove.sh
scripts/r/: analysis.r  cheatsheet.r  functions.r  r_graphics_notes.txt
scripts/ubelix/: compl_equiv.sh  complement.sh  complement_batch.sh  put.sh  submit.sh  sync_up.sh  update.sh
scripts/ubelix_admin/: get.sh  login.sh  put.sh  run.sh  update.sh
testset/michel/: michel_1.gff  michel_2.gff  michel_3.gff  michel_4.gff
thesis/: 2006_friedgut_made_tighter.bib  dwbibstyle.bst  example_for_run_analysis.gff  foo.txt  main.tex  mytikz.sty  run_analysis.tex  size_15_worst_case.txt  structure.txt  th copy.tex  th.tex  thesis.cls  thesis.sty
thesis/chapters/: 2_background.tex  3_construction.tex  4_investigation.tex
thesis/styles/: drawings.sty  thesis.cls  thesis.sty
thesis/tex/: 1_introduction.tex  2_background.tex  3_fribourg_construction.tex  (+2 more)
ubelix/: readme  ubelix_notes.txt
(+12766 files in other folders)
