EXTRA_DIST = faxml.xsd gff2faxml.xsl

libefadir = $(datadir)/libefa

libefa_DATA = faxml.xsd gff2faxml.xsl example1.xml example2.xml example3.xml \
	      example4.xml example5.xml example6.xml michel1.xml michel2.xml \
	      michel3.xml michel4.xml symbol2.xml symbol3.xml symbol4.xml \
	      symbol5.xml tasks.sh test_set_convert.sh test_set_run.sh \
	      buechi_stat.py eval_hash.py eval_stat.py

all-local:
